Fix main page scrollbar and socket status position

--- a/client/src/components/Projects/Projects.module.css
+++ b/client/src/components/Projects/Projects.module.css
@@ -36,7 +36,6 @@
 .card {
   border-radius: 4px;
   height: 150px;
-  margin-bottom: 24px;
   transition: all 200ms ease !important;
 }
 
@@ -53,7 +52,6 @@
 .cardsWrapper {
   flex: 1 1 auto;
   max-height: 100%;
-  overflow: auto;
 }
 
 .gridFix {
